fix: detail and list page items image alignment

--- a/web/src/app/feed/detail-page/detail-page.component.scss
+++ b/web/src/app/feed/detail-page/detail-page.component.scss
@@ -1,8 +1,3 @@
-mat-card {
-  margin: 15px 0px 0px 0px;
-  height: 100%;
-}
-
 mat-card-title {
   color: #88b0a0;
   margin-left: 6px;
@@ -17,8 +12,6 @@ mat-card-subtitle {
   color: #88b0a0;
   margin: 6px;
 }
-
-
 
 .descricao {
   font-size: 15px;
@@ -182,10 +175,7 @@ mat-card-subtitle {
   align-content: flex-start;
   position: relative;
   height: 20%;
- }
-
-
-
+}
 
 .h5 {
   color: #88b0a0;
@@ -193,45 +183,31 @@ mat-card-subtitle {
   height: max-content;
   min-width: min-content;
 }
-.image {
+
+.image-style {
+  color: white;
+  background: #88b0a0;
   object-fit: cover;
-  height: 65%;
   min-width: 0;
   min-height: 0;
   flex-shrink: 0;
   box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14),
     0px 1px 3px 0px rgba(0, 0, 0, 0.12);
-  margin: 0px 15px 0px 0px;
-}
-.image_1 {
-  object-fit: cover;
-  width: 50%;
-  min-width: 0;
-  min-height: 0;
-
-  box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14),
-    0px 1px 3px 0px rgba(0, 0, 0, 0.12);
-  margin: 15px 15px 0px 0px;
-}
-.image_2 {
-  object-fit: cover;
-  width: 50%;
-  min-width: 0;
-  min-height: 0;
-
-  box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14),
-    0px 1px 3px 0px rgba(0, 0, 0, 0.12);
-  margin: 15px 15px 0px 0px;
+  margin: 0 0 0.5em 0.5em;
 }
 
-.image_3 {
-  object-fit: cover;
-  width: 50%;
-  min-width: 0;
-  min-height: 0;
-  
-  box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
-  margin: 15px 15px 0px 0px;
+.image-big {
+  height: 65%;
+  margin-right: 0.5em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.image-small {
+  width: 48%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .button_1 {
@@ -264,10 +240,9 @@ span {
   }
 }
 
-
 .featured-items {
   mat-card-title {
-    font-size: .7em;
+    font-size: 0.7em;
   }
 
   .mat-card-image {
